TP8-Tavarifun/tests/bad/option/t01.ml
let x : int option = Some 1 ;;
print_int x ;;
